--- a/views/index.ejs
+++ b/views/index.ejs
@@ -51,17 +51,17 @@
           </a>
         </div>
         <div
-          class="w-full h-[88%] pt-5 flex flex-col items-center bg-[#ffffff] mt-2 rounded-2xl max-[600px]:flex-row max-[600px]:h-[10vh] max-[600px]:justify-start max-[600px]:pl-5 max-[600px]:pt-0 max-[600px]:items-start"
+          class="w-full h-[88%] pt-5 flex flex-col items-center bg-[#ffffff] mt-2 rounded-2xl max-[600px]:flex-row max-[600px]:h-[10vh] max-[600px]:justify-start max-[600px]:pl-5 max-[600px]:pt-0 max-[600px]:items-start overflow-x-scroll overflow-y-hidden"
         >
           <% allusers.forEach(function(user){%>
           <div
             id="messagewala"
-            class="username h-16 flex p-2 items-center justify-evenly w-[90%] border-b-2 max-[600px]:w-fit max-[600px]:gap-3 max-[600px]:h-fit"
+            class="username h-16 flex p-2 items-center justify-evenly w-[90%] border-b-2 max-[600px]:w-fit max-[600px]:gap-3 max-[600px]:h-fit max-[600px]:flex-col"
             onclick="createMessageElement('<%=loggedinuser.id%>','<%=user._id%>','<%= user.avatar.url %>', '<%= user.username %>', '<%= user.name %>','<%=user.status%>')"
             data-id="<%=user._id%>"
             data-img="<%=user.avatar.url%>"
           >
-            <div class="h-14 w-14 relative">
+            <div class="h-14 w-14 relative max-[600px]:h-10 max-[600px]:w-10">
               <% if(user.status ==="1"){%>
               <div
                 class="h-3 w-3 absolute bottom-2 right-1 border-2 border-white bg-green-500 rounded-full"
@@ -74,8 +74,10 @@
                 alt=""
               />
             </div>
-            <div class="w-[70%] h-ful max-[600px]:hidden">
-              <p class="text-lg font-semibold"><%=user.name%></p>
+            <div class="w-[70%] h-fit">
+              <p class="text-lg font-semibold max-[600px]:text-xs">
+                <%=user.name%>
+              </p>
               <!-- <p class="text-xs font-semibold text-gray-400">Last messge</p> -->
             </div>
             <div class="">
@@ -92,7 +94,7 @@
         id="background"
         class="w-[70.5%] h-full bg-no-repeat bg-cover bg-[url('https://i.pinimg.com/originals/bb/f5/fd/bbf5fd9d83afd98ff698ef63b7568f0d.gif')] max-[600px]:w-full"
       ></div>
-      <div id="messagebox" class="hidden w-[70.5%] h-full max-[600px]:w-full"  >
+      <div id="messagebox" class="hidden w-[70.5%] h-full max-[600px]:w-full">
         <div
           id="messageboxnav"
           class="messageboxnav max-[600px]:ml-2 max-[600px]:mt-2"
@@ -100,9 +102,11 @@
 
         <div
           id="messagecontainer"
-          class="messagecontainer w-full h-[78%] pb-5 overflow-scroll pt-5 bg-white mt-2 rounded-2xl max-[600px]:h-[62%] overflow-x-hidden "
+          class="messagecontainer w-full h-[78%] pb-5 overflow-scroll pt-5 bg-white mt-2 rounded-2xl max-[600px]:h-[62%] overflow-x-hidden"
         ></div>
-        <div class="w-full flex gap-2 h-16 mt-2 max-[600px]:fixed max-[600px]:bottom-0 max-[600px]:bg-[white] ">
+        <div
+          class="w-full flex gap-2 h-16 mt-2 max-[600px]:fixed max-[600px]:bottom-0 max-[600px]:bg-[white]"
+        >
           <div
             class="w-[84%] h-full rounded-2xl overflow-hidden bg-white max-[600px]:w-[70%]"
           >
@@ -110,7 +114,7 @@
               <input
                 type="text"
                 name=""
-                class=" h-16 pl-4 w-full text-2xl outline-none"
+                class="h-16 pl-4 w-full text-2xl outline-none"
                 id="chatinput"
                 placeholder="write messages ........"
                 oninput="checkInput()"
